<resources>
    <string name="app_name">PhysiotherapyCenterApplication</string>
    <string name="new_app_name">Φυσιοθεραπευτήριο AndroidStudio2023</string>
    <!--Texts-->
    <string name="mainPageTitle">Κεντρική Σελίδα</string>
    <string name="choiseButtonText">ΕΠΙΛΟΓΗ</string>
    <!--By Denesidis-->
    <string name="Hello">Καλώς Ήρθατε!</string>
    <string name="descriptionMessage">Η ακόλουθη εφαρμογή αποτελεί:\nΈνα σύστημα διαχείρισης\nφυσιοθεραπευτηρίου, \nτο οποίο είναι διαθέσιμο για όλα\n τα μέλη του ΠΣΦ.</string>
    <string name="linkp1">Μάθετε περισσότερα</string>
    <string name="LoginPSFButtonName">ΠΣΦ</string>
    <string name="LoginPhysiotherapistButtonName">ΦΥΣΙΟΘΕΡΑΠΕΥΤΗΣ</string>
    <string name="LoginPatientButtonName">ΑΣΘΕΝΗΣ</string>
    <string name="emailTextView">Email</string>
    <string name="passwordTextView">Password</string>
    <string name="clinicsCentralPageHeader">Κεντρική Σελίδα Φυσιοθεραπευτηρίων</string>
    <string name="clinicsTableHeaderCentralPage">Φυσιοθεραπευτήρια</string>
    <string name="addClincPageHeader">Νέο Φυσιοθεραπευτήριο</string>
    <string name="createTextButton">Δημιουργία +</string>
    <string name="clinicNameHeader">Όνομα</string>
    <string name="clinicAddressHeader">Διεύθυνση</string>
    <string name="clinicAFMHeader">Α.Φ.Μ</string>
    <string name="newClinicButtonText">Νέο Φυσιοθεραπευτήριο +</string>
    <string name="clearForm">Εκκαθάριση Φόρμας</string>

    <string name="servicesTableHeaderCentralPage">Υπηρεσίες/Παροχές</string>
    <string name="newServiceButtonText">Νέα Παροχή +</string>
    <string name="addServiceNameHeader">Νέα Παροχή</string>

    <!--By Diskos-->
    <string name="patient">Νέος Ασθενής</string>
    <string name="patientdescriptionMessage">Εισάγετε τα στοιχεία του ασθενή:</string>
    <string name="maindoctorpage">Κεντρική Σελίδα</string>
    <string name="welcomedoctor">Καλώς Ορίσατε! </string>
    <string name="popuptitle">Αιτήσεις </string>
    <string name="popupmessage">Έχετε αναπάντητα αιτήματα!  Ενημερώστε τους ασθενείς εγκαίρως</string>


    <!--IDs-->
    <!--Strings Arrays-->
    <string-array name="searchPSFsChoices">
        <item>Όλα</item>
        <item>Α.Φ.Μ</item>
        <item>Όνομα</item>
        <item>Διεύθυνση</item>
    </string-array>
</resources>