<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".CreatePSPage">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/clinicNameHeader"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newPSName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/normal_textfileds_border"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:paddingBottom="3dp" />

        <TextView
            android:id="@+id/nameErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/errorColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/clinicAddressHeader"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newPSAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/normal_textfileds_border"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:paddingBottom="3dp" />

        <TextView
            android:id="@+id/addresErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/errorColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/clinicAFMHeader"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newPSAFM"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/normal_textfileds_border"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:paddingBottom="3dp" />

        <TextView
            android:id="@+id/afmErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/errorColor"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appicon1" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addClincPageHeader"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:onClick="CreateNewPS"
        android:text="@string/createTextButton"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>