<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="2dp"
    tools:context=".PSFCentralPage">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/Hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appicon1" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/newPSButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPSFFiled">

        <LinearLayout
            android:id="@+id/HeaderClinicsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#2196F3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/clinicNameHeader"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#2196F3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/clinicAddressHeader"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#2196F3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/clinicAFMHeader"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/clinicsScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/clinicsDataLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/DataTable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundColor" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/normal_textfileds_border"
        android:backgroundTintMode="add"
        android:entries="@array/searchPSFsChoises"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/searchPSFFiled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchPSFFiled"
        app:layout_constraintTop_toTopOf="@+id/searchPSFFiled" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="GoPreviousORNextPage"
        android:text="@string/clinicsCentralPageHeader"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/clinicsTableHeaderCentralPage"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/newPSButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/buttonColor"
        android:onClick="goNextPage"
        android:text="@string/newClinicButtonText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <ImageButton
        android:id="@+id/searchPSFButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/normal_textfileds_border"
        android:onClick="onClickSearchButton"
        android:padding="5dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/searchPSFFiled"
        app:layout_constraintEnd_toStartOf="@+id/searchPSFFiled"
        app:layout_constraintTop_toTopOf="@+id/searchPSFFiled"
        app:srcCompat="@drawable/search" />

    <EditText
        android:id="@+id/searchPSFFiled"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="-58dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/normal_textfileds_border"
        android:ems="10"
        android:hint="Αναζήτηση"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingBottom="3dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <ImageButton
        android:id="@+id/clinicsCentralReturn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:onClick="goCentralPage"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_545435" />

</androidx.constraintlayout.widget.ConstraintLayout>