<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".Main_doctor_page">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:id="@+id/popUpArea"
            android:layout_width="286dp"
            android:layout_height="169dp"
            android:layout_gravity="center"
            android:background="@drawable/mockup_bolder"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/patientsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/popuptitle"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/popupMess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/popupmessage"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/okTextView"
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/mockup_textview_bolder"
                android:onClick="goToPatientsRequests"
                android:padding="5dp"
                android:text="Εντάξει"
                android:textAlignment="center"
                android:textColor="#03A9F4"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/appicon1"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:text="κ."
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcomedoctor"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="TextView"
            android:textColor="@color/buttonColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />

        <Button
            android:id="@+id/patientsButton"
            android:layout_width="163dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/buttonColor"
            android:text="Ασθενείς"
            app:layout_constraintBottom_toTopOf="@+id/patientsAppointmentButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/patientsAppointmentButton"
            android:layout_width="163dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/buttonColor"
            android:text="Ραντεβού"
            app:layout_constraintBottom_toTopOf="@+id/addNewPatientButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addNewPatientButton"
            android:layout_width="163dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/buttonColor"
            android:text="Νέος Ασθενής +"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button6"
            android:layout_width="170dp"
            android:layout_height="41dp"
            android:backgroundTint="@color/buttonColor"
            android:onClick="goToHistoryPage"
            android:text="Ιστορικό-temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

